--- a/sources/ts/components/Sections/AdminSection/Users/components/UpdateUserModalWindow/UpdateUserModalWindow.module.css
+++ b/sources/ts/components/Sections/AdminSection/Users/components/UpdateUserModalWindow/UpdateUserModalWindow.module.css
@@ -30,6 +30,7 @@
 .content-wrapper {
     display: flex;
     flex-flow: row nowrap;
+    overflow: hidden;
 }
 
 .close-button {
@@ -100,12 +101,30 @@
     flex-grow: 1;
     display: flex;
     flex-flow: column nowrap;
+    justify-content: space-between;
     row-gap: 12px;
     width: 300px;
     border-left: 1px solid #e5e5e5;
     padding-left: 16px;
     margin-left: 16px;
     white-space: nowrap;
+}
+
+.form-content {
+    flex-shrink: 1;
+    flex-grow: 1;
+    display: flex;
+    flex-flow: column nowrap;
+    row-gap: 12px;
+    width: 100%;
+    overflow: auto;
+}
+
+.form-action {
+    flex-shrink: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: end;
 }
 
 .form-group {
@@ -142,7 +161,6 @@
     align-items: center;
     column-gap: 8px;
     min-width: 120px;
-    margin-top: 12px;
 }
 
 @media only screen and (width < 580px) {
@@ -159,6 +177,7 @@
     .content-wrapper {
         flex-flow: column nowrap;
         row-gap: 24px;
+        overflow: auto;
     }
 
     .user-update-form {
@@ -188,6 +207,7 @@
     .content-wrapper {
         flex-flow: column nowrap;
         row-gap: 24px;
+        overflow: auto;
     }
 
     .user-update-form {
@@ -217,6 +237,7 @@
     .content-wrapper {
         flex-flow: column nowrap;
         row-gap: 24px;
+        overflow: auto;
     }
 
     .user-update-form {
@@ -246,6 +267,7 @@
     .content-wrapper {
         flex-flow: column nowrap;
         row-gap: 24px;
+        overflow: auto;
     }
 
     .user-update-form {
